<resources>
    <string name="app_name">mobile-sdk-demo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="custom_attribute">Custom attribute</string>
    <string name="custom_attribute_string">Custom text attribute</string>
    <string name="custom_attribute_number">Custom number attribute</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="error_register">Register failed</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_send_custom_event">Send custom event</string>
    <string name="title_activity_settings">Settings</string>


    <string name="action_start_with_params_one">Start new activity with params</string>

    <string name="email">democustomer@demo.com</string>
    <string name="name">John</string>
    <string name="lastName">Dao</string>
    <string name="customerId">myseconduser</string>

</resources>
